--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                     <h3 class="main-section-header">Finite Automata</h3>
                     <div class="mylink-container">
                     	<p class="mylink"><a href="/pages/cellularautomatacatalogue.html">Catalogue</a></p>
-                        <p class="mylink"><a href="/pages/cellularautomata.html">Interactive model</a></p>
+                        <p class="mylink"><a href="/pages/cellularautomata.html">Classic CA</a></p>
                         <p class="mylink"><a href="/pages/cellularautomataconstructor.html">Constructor</a></p>
+                        <p class="mylink"><a href="/pages/cellularautomata2.html">Fractional CA</a></p>
                         <p class="mylink"><a href="/pages/gameoflife.html">The Game of Life</a></p>
                     </div>
                 </div>
