--- a/pages/cellularautomata2.html
+++ b/pages/cellularautomata2.html
@@ -27,6 +27,7 @@
       <div class="control-form">
         <span class="pixel-size control-element" style="width:13em; "></span>
         <span class="rule-add control-element" style="width:13em; "></span>
+        <span class="rule-noise control-element" style="width:13em; "></span>
         <span class="seed-menu control-element" style="" ></span>
 
       </div>
