--- a/pages/cellularautomata2.html
+++ b/pages/cellularautomata2.html
@@ -55,7 +55,7 @@
       Controls.ruleAdd = new FloatInput(
         $('.rule-add'), 'Add', {
           min: 0, max: 1,
-          init: 0.95,
+          init: 0.01,
           step: 0.05,
           precision: 1e10,
           onchange: updateHash
@@ -64,7 +64,7 @@
       Controls.ruleNoise = new FloatInput(
         $('.rule-noise'), 'Noise', {
           min: 0, max: 1,
-          init: 0.01,
+          init: 0.95,
           step: 0.005,
           precision: 1e10,
           onchange: updateHash
@@ -109,12 +109,12 @@
           seed:seed, ruleAdd:ruleAdd, ruleNoise:ruleNoise, pixelSize:pixelsize
         }, '', pageAndHash);
       } else {
-        var ruleAdd = 0.95;
+        var ruleAdd = 0.01;
         var pixelsize = 1;
-        var ruleNose = 0.01;
+        var ruleNoise = 0.95;
         var seed = 'point';
         Controls.ruleAdd.val(ruleAdd);
-        Controls.ruleNoise.val(ruleNose);
+        Controls.ruleNoise.val(ruleNoise);
         Controls.pixelsize.val(pixelsize);
         Controls.seed.val(seed);
         History.replaceState({
