--- a/pages/julia.html
+++ b/pages/julia.html
@@ -30,39 +30,92 @@
         </div>
 
         <script type="text/javascript">
-    $(document).ready(function() {
-      var dim = Utils.getSize();
-      var canvas = new Canvas($('.canvas-container'), { background: 'black' }, dim);
+        function wheelTimeout (f, done) {
+          clearTimeout(f.updateLock);
+          f.updateLock = setTimeout(done, 333);
+        }
 
-      var colors = [10,15,20,25,30,35,40,45,50,55,60,65,70,75,80,85,90,95,100,105,110,115,120,125,130,135,140,145,150,155,160,165,170,175,180,185,190,195,200,205,210,215,220,225,230,235,240];
-      j = new Julia(new Complex(.4, .25), colors.length-1);
-      var seq = 0;
+        function wheel (event) {
+          var state = History.getState().data;
+          state.zoom += event.originalEvent.wheelDelta / 1000;
+          state.zoom = Math.floor(state.zoom*1e4)/1e4;
+          History.replaceState(state, '',
+            '?'+state.x+'|'+state.y+'|'+state.zoom);
+          wheelTimeout(j, function () { openpage(); j.updateLock=false; });
+        }
 
-      function cDelta(f) {
-        return new Complex(0.4*Math.cos(f/100) + Math.random()/200, 0.25*Math.cos(f/100) + Math.random()/200);
-      }
+        function dragstart (event) {
+          coords = { x : event.clientX, y : event.clientY };
+          $(window).mousemove(function() {
+            isDragging = true;
+            $(window).unbind('mousemove');
+          });
+        }
 
-      function update() {
-        MULT = 1.3;
-        j = new Julia(cDelta(seq), MULT*(colors.length-1));
-        canvas.init();
-
-        for (var x = 0; x < dim.w; x++) {
-          for (var y = 0; y < dim.h; y++) {
-            var xc = (x/dim.w-.5 /*+ Center.x/dim.w*/)*2*/*Center.zoom*/j.R;
-            var yc = (y/dim.h-.5 /*+ Center.y/dim.h*/)*2*/*Center.zoom*/j.R;
-            var iters = j.evaluate(new Complex(xc, yc));
-            if (iters > MULT) {
-              canvas.drawPixel(1, x, y, colors[Math.floor(iters/MULT)], 0, 0, 256)
-            }
+        function dragend (event) {
+          var wasDragging = isDragging;
+          isDragging = false;
+          $(window).unbind('mousemove');
+          if (wasDragging) {
+            var state = History.getState().data;
+            state.x += (coords.x - event.clientX);
+            state.y += (coords.y - event.clientY);
+            History.replaceState(state, '',
+              '?'+state.x+'|'+state.y+'|'+state.zoom);
+            wheelTimeout(j, function () { openpage(); j.updateLock=false; });
+          } else {
+            //was clicking
           }
         }
-        seq ++;
-        canvas.done();
-      }
 
-      update();
-    })
+        function parseInitialUrl(a) {
+          if (a.indexOf('?') > -1) {
+            var pageAndHash = a.substring(a.indexOf('?'));
+            var pageUrl = pageAndHash.substring(1);
+            var parsed = pageUrl.split('|');
+
+            var x = parseFloat(parsed[0]);
+            var y = parseFloat(parsed[1]);
+            var z = parseFloat(parsed[2]);
+
+            History.pushState({ x:x, y:y, zoom:z }, '', pageAndHash);
+          } else {
+            state = { x: 0, y: 0, zoom: 1 };
+            History.replaceState(state, 'Julia set',
+              '?'+state.x+'|'+state.y+'|'+state.zoom);
+          }
+          openpage();
+        }
+
+        function openpage () {
+            ga('send', 'pageview', '' + location.pathname + location.search  + location.hash);
+            var data = History.getState().data;
+            j.center = {
+              x:    data.x || 0,
+              y:    data.y || 0,
+              zoom: data.zoom || 1,
+            };
+            j.draw();
+        }
+
+        $(document).ready(function() {
+          var dim = Utils.getSize();
+          var container = $('.canvas-container');
+          var canvas = new Canvas(container, { background: 'black' }, dim);
+          j = new Julia(canvas, Math.PI, 100);
+          $(window).on('hashchange', openpage);
+          // j.draw();
+
+          isDragging = false;
+          var coords = { zoom: 1 };
+          container
+            .mousedown(dragstart)
+            .mouseup(dragend)
+            .bind('mousewheel', wheel);
+
+          parseInitialUrl(location.href);
+
+        });
         </script>
     </div>
 
